--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  http: ^0.13.3
+  cupertino_icons: ^1.0.5
+  http: ^0.13.5
+  mask_text_input_formatter: ^2.4.0
 
 dev_dependencies:
   flutter_test:
